# aiogram_bot_template

./: README.md  bot.py  config.py  docker-compose.yml  pyproject.toml
data/: bot.db
database/: db.py
handlers/: commands.py
keyboards/: inline.py  reply.py
middlewares/: logging.py
models/: models.py
